syntax = "proto3";

package proto;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/xws2021-nistagram/common/proto";

service Content {
  /*    Posts    */
  rpc CreatePost (Post) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/posts",
      body: "*"
    };
  }

  rpc GetAllPostsReduced (EmptyRequestContent) returns (ReducedPostArray) {
    option(google.api.http) = {
      get: "/posts/reduced"
    };
  }

  rpc GetAllPosts (EmptyRequestContent) returns (PostArray) {
    option(google.api.http) = {
      get: "/posts"
    };
  }

  rpc GetPostsForUser (RequestId) returns (PostArray) {
    option(google.api.http) = {
      get: "/posts/user/{id}"
    };
  }

  rpc RemovePost (RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      delete: "/posts/{id}"
    };
  }

  rpc GetPostById (RequestId) returns (Post) {
    option(google.api.http) = {
      get: "/posts/{id}"
    };
  }

  rpc SearchContentByLocation (SearchLocationRequest) returns (PostArray) {
    option(google.api.http) = {
      post: "/location",
      body: "*"
    };
  }

  rpc GetPostsByHashtag (Hashtag) returns (PostArray) {
    option(google.api.http) = {
      post: "/posts-by-hashtag",
      body: "*"
    };
  }

  rpc GetAllHashtags (EmptyRequestContent) returns (Hashtags) {
    option(google.api.http) = {
      get: "/hashtag/get-all",
    };
  }

  /* * * * * * * * * * * * */

  /*    Stories    */
  rpc CreateStory (Story) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/stories",
      body: "*"
    };
  }

  rpc GetAllStories (EmptyRequestContent) returns (StoriesHome) {
    option(google.api.http) = {
      get: "/stories"
    };
  }

  rpc GetStoriesForUser (RequestId) returns (StoriesArray) {
    option(google.api.http) = {
      get: "/stories/user/{id}"
    };
  }

  rpc GetMyStories (RequestId) returns (StoriesArray) {
    option(google.api.http) = {
      get: "/stories/archive/{id}"
    };
  }

  rpc RemoveStory (RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      delete: "/stories/{id}"
    };
  }

  rpc GetStoryById (RequestId) returns (Story) {
    option(google.api.http) = {
      get: "/stories/{id}"
    };
  }
  /* * * * * * * * * * * * */

  /*    Comments    */
  rpc CreateComment (Comment) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/comments",
      body: "*"
    };
  }

  rpc GetCommentsForPost (RequestId) returns (CommentsArray) {
    option(google.api.http) = {
      get: "/comments/{id}"
    };
  }
  /* * * * * * * * * * * * */

  /* Likes & Dislikes */
  rpc CreateLike (Like) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/likes",
      body: "*"
    };
  }

  rpc GetLikesForPost (RequestId) returns (LikesArray) {
    option(google.api.http) = {
      get: "/likes/{id}"
    };
  }

  rpc GetDislikesForPost (RequestId) returns (LikesArray) {
    option(google.api.http) = {
      get: "/dislikes/{id}"
    };
  }

  rpc GetUserLikedOrDislikedPosts (Like) returns (PostArray) {
    option(google.api.http) = {
      post: "/liked-posts-user",
      body : "*"
    };
  }
  /* * * * * * * * * * * * */

  /* Collections & Favorites */
  rpc GetAllCollections (RequestId) returns (CollectionsArray) {
    option(google.api.http) = {
      get: "/collections/user/{id}"
    };
  }

  rpc GetCollection (RequestId) returns (Collection) {
    option(google.api.http) = {
      get: "/collections/{id}"
    };
  }

  rpc CreateCollection (Collection) returns (Collection) {
    option(google.api.http) = {
      post: "/collections",
      body: "*"
    };
  }

  rpc RemoveCollection (RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      delete: "/collections/{id}"
    };
  }

  rpc GetUserFavorites (RequestId) returns (Favorites) {
    option(google.api.http) = {
      get: "/favorites/{id}"
    };
  }

  // Only fetching post ids, instead of all the data
  rpc GetUserFavoritesOptimized (RequestId) returns (Favorites) {
    option(google.api.http) = {
      get: "/favorites/optimized/{id}"
    };
  }

  rpc CreateFavorite (FavoritesRequest) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/favorites/create",
      body: "*"
    };
  }

  rpc RemoveFavorite (FavoritesRequest) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/favorites/delete",
      body: "*"
    };
  }
  /* * * * * * * * * * * * */

  /* Hashtags */
  rpc CreateHashtag (Hashtag) returns (Hashtag) {
    option(google.api.http) = {
      post: "/hashtag/create",
      body : "*"
    };
  }

  /*   Highlights   */
  rpc GetAllHighlights (RequestId) returns (HighlightsArray) {
    option(google.api.http) = {
      get: "/highlights/user/{id}"
    };
  }

  rpc GetHighlight (RequestId) returns (Highlight) {
    option(google.api.http) = {
      get: "/highlights/{id}"
    };
  }

  rpc CreateHighlight (Highlight) returns (Highlight) {
    option(google.api.http) = {
      post: "/highlights",
      body: "*"
    };
  }

  rpc RemoveHighlight (RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      delete: "/highlights/{id}"
    };
  }

  rpc CreateHighlightStory (HighlightRequest) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/highlights/create",
      body: "*"
    };
  }

  rpc RemoveHighlightStory (HighlightRequest) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/highlights/delete",
      body: "*"
    };
  }
  /* * * * * * * * * * * * */

  /*   Content complaints   */
  rpc CreateContentComplaint (ContentComplaint) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/complaint/create",
      body: "*"
    };
  }

  rpc DeleteComplaintByUserId(RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      delete: "/complaint/{id}"
    };
  }

  rpc GetAllContentComplaints (EmptyRequestContent) returns (ContentComplaintArray) {
    option(google.api.http) = {
      get: "/complaint/get",
    };
  }

  rpc RejectById(RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/complaint/reject",
      body: "*"
    };
  }

  /* * * * * * * * * * * * */

  /*   Ads   */
  rpc GetAds (EmptyRequestContent) returns (AdArray) {
    option(google.api.http) = {
      get: "/ads"
    };
  }

  rpc GetAdsFromInfluencer (RequestId) returns (AdArray) {
    option(google.api.http) = {
      get: "/ads/user/{id}"
    };
  }

  rpc CreateAd (Ad) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/ads",
      body: "*"
    };
  }

  rpc IncrementLinkClicks (RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      put: "/ads/clicks",
      body: "*"
    };
  }
  /* * * * * * * * * * * * */

  /*   Campaigns   */
  rpc GetCampaigns (EmptyRequestContent) returns (CampaignArray) {
    option(google.api.http) = {
      get: "/campaigns"
    };
  }

  rpc GetCampaign (RequestId) returns (Campaign) {
    option(google.api.http) = {
      get: "/campaigns/{id}"
    };
  }

  rpc GetCampaignStats (RequestId) returns (CampaignStats) {
    option(google.api.http) = {
      get: "/campaigns/stats/{id}"
    };
  }

  rpc CreateCampaign (Campaign) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/campaigns",
      body: "*"
    };
  }

  rpc UpdateCampaign (Campaign) returns (EmptyResponseContent) {
    option(google.api.http) = {
      put: "/campaigns",
      body: "*"
    };
  }

  rpc DeleteCampaign (RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      delete: "/campaigns/{id}"
    };
  }

  rpc CreateCampaignRequest (CampaignInfluencerRequest) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/campaigns/create-campaign",
      body:"*"
    };
  }

  rpc UpdateCampaignRequest (CampaignInfluencerRequest) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/campaigns/update-campaign-request",
      body:"*"
    };
  }

  rpc GetCampaignRequestsByAgent (CampaignInfluencerRequest) returns (CampaignRequestArray) {
    option(google.api.http) = {
      post: "/campaigns/get-campaign-request-by-agent",
      body:"*"
    };
  }

  /* * * * * * * * * * * * */

  /*   Ad Categories  */
  rpc GetAdCategories (EmptyRequestContent) returns (AdCategoryArray) {
    option(google.api.http) = {
      get: "/ads/categories"
    };
  }

  rpc CreateAdCategory (AdCategory) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/ads/categories",
      body: "*"
    };
  }

  rpc GetUsersAdCategories (EmptyRequestContent) returns (AdCategoryArray) {
    option(google.api.http) = {
      get: "/ads/categories/user"
    };
  }

  rpc CreateUserAdCategories (RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/ads/categories/user",
      body: "*"
    };
  }

  rpc UpdateUsersAdCategories (AdCategoryArray) returns (EmptyResponseContent) {
    option(google.api.http) = {
      put: "/ads/categories/user",
      body: "*"
    };
  }

  /* * * * * * * * * * * * */

}

/*    Posts    */
message Post {
  string id = 1;
  string userId = 2;
  bool isAd = 3;
  string type = 4;
  string description = 5;
  string location = 6;
  google.protobuf.Timestamp createdAt = 7;
  repeated Media media = 8;
  repeated Comment comments = 9;
  repeated Like likes = 10;
  repeated Like dislikes = 11;
  repeated Hashtag hashtags = 12;
}

// Used for basic preview of posts, comments and likes/dislikes will be fetched on request
message ReducedPost {
  string id = 1;
  string userId = 2;
  bool isAd = 3;
  string type = 4;
  string description = 5;
  string location = 6;
  google.protobuf.Timestamp createdAt = 7;
  repeated Media media = 8;
  int32 commentsNum = 9;
  int32 likesNum = 10;
  int32 dislikesNum = 11;
}

message Media {
  string id = 1;
  string type = 2;
  string postId = 3;
  string content = 4;
  int32 orderNum = 5;
  repeated Tag tags = 6;
}

message Tag {
  string mediaId = 1;
  string userId = 2;
  string username = 3;
}

message Hashtags {
  repeated Hashtag hashtags = 1;
}

message Hashtag {
  string id = 1;
  string text = 2;
}

message ReducedPostArray {
  repeated ReducedPost posts = 1;
}

message PostArray {
  repeated Post posts = 1;
  repeated Ad ads = 2;
}
/* * * * * * * * * * * * */

/*    Stories    */
message Story {
  string id = 1;
  string userId = 2;
  bool isAd = 3;
  string type = 4;
  string description = 5;
  string location = 6;
  google.protobuf.Timestamp createdAt = 7;
  repeated Media media = 8;
  bool isCloseFriends = 9;
  repeated Hashtag hashtags = 10;
}

message StoriesArray {
  repeated Story stories = 1;
}

message StoryHome {
  string userId = 1;
  string username = 2;
  string userPhoto = 3;
  repeated Story stories = 4;
}

message StoriesHome {
  repeated StoryHome stories = 1;
  repeated StoryAdHome ads = 2;
}

message StoryAdHome{
  bool ownerHasStories = 1;
  Ad ad = 2;
}

/* * * * * * * * * * * * */



/*    Ads    */
// Using the same message for Story Ad and Post Ad,
// since Story Ad cannot be for close friends, therefore we will only have empty fields
// for fields specific for Post.
message Ad{
  string id = 1;
  string link = 2;
  string campaignId = 3;
  int32  linkClicks = 4;
  Post   post = 5;
}

message AdArray {
  repeated Ad ads = 1;
}

message Campaign{
  string id = 1;
  string name = 2;
  bool   isOneTime = 3;
  google.protobuf.Timestamp startDate = 4;
  google.protobuf.Timestamp endDate = 5;
  int32 startTime = 6;
  int32 endTime = 7;
  int32  placements = 8;
  string agentId = 9;
  AdCategory category = 10;
  google.protobuf.Timestamp lastUpdated = 11;
  repeated Ad ads = 12;
  string   type = 13;
}

message CampaignArray {
  repeated Campaign campaigns = 1;
}

message AdCategory{
  string id = 1;
  string name = 2;
}

message AdCategoryArray{
  repeated AdCategory categories = 1;
}

// Statistics
message CampaignStats {
  string id = 1;
  string name = 2;
  bool isOneTime = 3;
  google.protobuf.Timestamp startDate = 4;
  google.protobuf.Timestamp endDate = 5;
  int32  startTime = 6;
  int32  endTime = 7;
  int32  placements = 8;
  string category = 9;
  string type = 10;
  repeated InfluencerStats influencers = 11;
  int32 likes = 12;
  int32 dislikes = 13;
  int32 comments = 14;
  int32 clicks = 15;
}

message InfluencerStats {
  string id = 1;
  string username = 2;
  repeated AdStats ads = 3;
  int32 totalLikes = 4;
  int32 totalDislikes = 5;
  int32 totalComments = 6;
  int32 totalClicks = 7;
}

message AdStats {
  string id = 1;
  repeated string media = 2;
  string type = 3;
  repeated string hashtags = 4;
  string location = 5;
  int32 likes = 6;
  int32 dislikes = 7;
  int32 comments = 8;
  int32 clicks = 9;
}
message  CampaignInfluencerRequest {
  string id = 1;
  string agentId = 2;
  string influencerId = 3;
  string campaignId = 4;
  string status = 5;
  google.protobuf.Timestamp postAt = 6;
}

message  CampaignRequestArray {
  repeated CampaignInfluencerRequest campaignRequests = 1;
}

/* * * * * * * * * * * * */

/* Collections & Favorites */
message Collection {
  string id = 1;
  string name = 2;
  string userId = 3;
  repeated Post posts = 4;
}

message Favorites {
  string userId = 1;
  repeated Collection collections = 2;
  repeated Post unclassified = 3;
}

message FavoritesRequest {
  string userId = 1;
  string postId = 2;
  string collectionId = 3;
}

message CollectionsArray {
  repeated Collection collections = 1;
}
/* * * * * * * * * * * * */

/*    Likes    */
message Like {
  string postId = 1;
  string userId = 2;
  bool isLike = 3;
  string username = 4;
}

message LikesArray {
  repeated Like likes = 1;
}
/* * * * * * * * * * * * */

/*    Comments    */
message Comment {
  string id = 1;
  string postId = 2;
  string userId = 3;
  string username = 4;
  string content = 5;
  google.protobuf.Timestamp createdAt = 6;
}

message CommentsArray {
  repeated Comment comments = 1;
}
/* * * * * * * * * * * * */

/*    Highlights   */
message Highlight {
  string id = 1;
  string name = 2;
  string userId = 3;
  repeated Story stories = 4;
}

message HighlightsArray {
  repeated Highlight highlights = 1;
}

message HighlightRequest{
  string userId = 1;
  string highlightId = 2;
  string storyId = 3;
}
/* * * * * * * * * * * * */

/*    Multi-usage messages    */
message RequestId {
  string id = 1;
}

message SearchLocationRequest {
  string location = 1;
}

message EmptyRequestContent {}
message EmptyResponseContent {}
/* * * * * * * * * * * * */


/*    Content Complaint    */
message ContentComplaint {
  string id = 1;
  string category = 2;
  string postId = 3;
  string status = 4;
  bool isPost = 5;
  string userId = 6;
}

message ContentComplaintArray {
  repeated ContentComplaint content_complaints = 1;
}

/* * * * * * * * * * * * */
